Add urls, update homepage
Adds urls for views-to-be and implements basic visa detail view.

Updates the homepage to display visa categories, and adds a bit of css and js
to support it.

Update the footer disclaimer, as we now have content from CC-BY and other
sources.

--- a/twvisafinder/templates/base.html
+++ b/twvisafinder/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css">
@@ -32,10 +32,17 @@
 {% include "footer.html"  %}
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-{#    <script src="{% static 'creative/js/jquery.js' %}"></script>#}
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="{% static 'bigday/js/custom.js' %}"></script>
+    <script>
+        $(document).ready(function() {
+            setFooterStyle();
+            setFooterStyle();  // hack, for some reason this needs to be called twice on load
+            window.onresize = setFooterStyle;
+        });
+    </script>
 {% block page_js %}
 {% endblock %}
 </body>
