Update CSS for home.html
Playing with CSS, nothing special, but the homepage now looks slightly
less stark.

--- a/twvisafinder/templates/visa.html
+++ b/twvisafinder/templates/visa.html
@@ -9,7 +9,7 @@
     <header id="main-header">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Taiwan Visa Finder</h1>
+		    <h1><a href="/">Taiwan Visa Finder</a></h1>
                 <hr>
             </div>
         </div>
