--- a/twvisafinder/static/twvisafinder/css/custom.css
+++ b/twvisafinder/static/twvisafinder/css/custom.css
@@ -1,13 +1,16 @@
 .visacategories {
+background-color: rgb(51, 51, 51);
 box-sizing: border-box;
 color: rgb(51, 51, 51);
 font-family: Roboto, sans-serif;
 font-size: 13.6px;
 font-weight: 300;
-margin-bottom: 0px;
+margin-bottom: 10px;
 margin-left: 0px;
 margin-right: 0px;
 margin-top: 0px;
+padding-bottom: 20px;
+padding-top: 15px;
 min-height: 194.333px;
 position: relative;
 }
@@ -15,8 +18,39 @@ position: relative;
 .visacategory {
 background-color: rgb(255, 255, 255);
 box-sizing: border-box;
-color: rgb(51, 51, 51);
+font-color: rgb(6, 27, 54);
 font-family: Roboto, sans-serif;
 font-size: 13.6px;
 font-weight: 300;
+border: 1px solid #d7d7d7;
+padding-bottom: 15px;
+padding-left: 15px;
+padding-right: 15px;
+padding-top: 15px;
+}
+
+.visacategory a {
+color: rgb(6, 27, 54);
+display: block;
+height: 100%;
+width: 100%;
+}
+
+.visacategory:hover {
+background-color: rgb(6, 27, 54);
+font-color: rgb(255, 255, 255);
+}
+
+.visacategory:hover a {
+	background-color: transparent;
+	color: rgb(255,255,255);
+	text-decoration: none;
+}
+
+.bg {
+background-color: rgb(0,45,90);
+color: rgb(255,255,255);
+margin-bottom: 0px;
+padding-bottom: 15px;
+padding-top: 15px;
 }
