--- a/twvisafinder/templates/home.html
+++ b/twvisafinder/templates/home.html
@@ -17,10 +17,10 @@
     <section class="bg" id="welcome">
         <div class="container">
             <div class="row">
-                <div class="text-center">
+                <div>
                     <h2 class="section-heading">Welcome!</h2>
                     <p>
-		    Taiwan Visa Finder.
+		    Select a category and learn about visas that might meet your needs.
                     </p>
                 </div>
             </div>
