--- a/twvisafinder/templates/base.html
+++ b/twvisafinder/templates/base.html
@@ -35,7 +35,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="{% static 'visafinder/js/custom.js' %}"></script>
+    <script src="{% static 'twvisafinder/js/custom.js' %}"></script>
     <script>
         $(document).ready(function() {
             setFooterStyle();
