--- a/twvisafinder/static/twvisafinder/css/custom.css
+++ b/twvisafinder/static/twvisafinder/css/custom.css
@@ -47,6 +47,74 @@ font-color: rgb(255, 255, 255);
 	text-decoration: none;
 }
 
+.visadescriptions {
+background-color: rgb(240, 240, 240);
+}
+
+.visadesc {
+background-color: rgb(255, 255, 255);
+border-bottom-left-radius: 0px;
+border-bottom-right-radius: 0px;
+border-collapse: collapse;
+border-top-left-radius: 0px;
+border-top-right-radius: 0px;
+box-shadow: rgba(193, 193, 193, 0.35) 1px 1px 4px 0px;
+box-sizing: border-box;
+color: rgb(51, 51, 51);
+display: block;
+font-family: Roboto, sans-serif;
+font-weight: 300;
+line-height: 19px;
+margin-bottom: 19px;
+transition-delay: 0s;
+transition-duration: 0.3s;
+transition-property: box-shadow;
+transition-timing-function: ease-out;
+width: 90%;
+margin-left: auto;
+margin-right: auto;
+}
+
+.visadesccontainer {
+border-collapse: collapse;
+box-sizing: border-box;
+color: rgb(51, 51, 51);
+font-family: Roboto, sans-serif;
+font-weight: 300;
+line-height: 19.4333px;
+margin-left: 0px;
+margin-right: 0px;
+padding-bottom: 24.3px;
+padding-left: 38.8667px;
+padding-right: 38.8667px;
+padding-top: 29.15px;
+}
+
+.visadesccontainer h3 {
+color: rgb(12, 42, 80);
+float: left;
+font-family: Roboto, sans-serif;
+font-size: 25px;
+font-weight: 500;
+margin-bottom: 0px;
+margin-left: 0px;
+margin-right: 0px;
+min-height: 1px;
+position: relative;
+}
+
+.visacomments {
+border-collapse: collapse;
+box-sizing: border-box;
+color: rgb(51, 51, 51);
+font-family: Roboto, sans-serif;
+font-size: 13.6px;
+font-weight: 300;
+line-height: 19.4333px;
+margin-top: 19.4333px;
+}
+
+
 .bg {
 background-color: rgb(0,45,90);
 color: rgb(255,255,255);
