--- a/twvisafinder/templates/category.html
+++ b/twvisafinder/templates/category.html
@@ -31,10 +31,16 @@
 	   {{ visasearchform }}
 	   <input type="submit" value="submit">
 	</form>
+     </section><section class="visadescriptions">
 	{% for visa in visas %}
-	<div class="row">
-		<a href="/visa/{{visa.name}}"><span class="visadescription">{{ visa.name }}</span></a>
-	    </div>
+	<div class="visadesc"><div class="visadesccontainer">
+		<div class="row">
+		<h3 class="col-sm-12"><a href="/visa/{{visa.name}}"><span class="visadescription">{{ visa.name }}</span></a></h3>
+		</div>
+		<div class="row"><div class="visacomments col-sm-6">
+		{{visa.description}}
+		</div></div>
+	</div></div>
 	{% endfor %}
 	    </div>
 	</div>
