--- a/twvisafinder/static/twvisafinder/css/custom.css
+++ b/twvisafinder/static/twvisafinder/css/custom.css
@@ -114,6 +114,21 @@ line-height: 19.4333px;
 margin-top: 19.4333px;
 }
 
+.gcdesccontainer {
+border-collapse: collapse;
+box-sizing: border-box;
+color: rgb(51, 51, 51);
+font-family: Roboto, sans-serif;
+font-weight: 300;
+line-height: 19.4333px;
+margin-left: 0px;
+margin-right: 0px;
+padding-bottom: 10px;
+padding-left: 38.8667px;
+padding-right: 38.8667px;
+padding-top: 10px;
+}
+
 
 .bg {
 background-color: rgb(0,45,90);
