Link back to taiwangoldcard.com for application instructions
also add a note about the need to select only one.

--- a/twvisafinder/templates/goldcardqualificationresults.html
+++ b/twvisafinder/templates/goldcardqualificationresults.html
@@ -38,6 +38,10 @@
 	<p class="visacomments">because you answered Yes to "{{qualification.goldcardquestion_set.all.0}}"</p>
 	</div></div>
 	{% endfor %}
+
+	<p>When applying for your Gold Card, you must choose only one of these options. Read the official information, 
+         work out which one you have the most supporting documents for and then 
+         <a href="https://taiwangoldcard.com/application-faq/application/#how-to-apply">submit your application</a>!</p>
      </section>
 
 
