--- a/twvisafinder/templates/visa.html
+++ b/twvisafinder/templates/visa.html
@@ -28,11 +28,11 @@
             <div class="row">
          	<span class="visadescription">{{ visa.description }}</span>
 	    </div>
-            <div class="row">
-         	<span>Requirements: {{ visa.requirements }} days</span>
+            <div class="visarequirements">
+         	<span><b>Requirements:</b> {{ visa.requirements }} days</span>
 	    </div>
             <div class="row">
-         	<span>Duation: {{ visa.duration }} days</span>
+         	<span><b>Duation:</b> {{ visa.duration }} days</span>
 	    </div>
             <div class="row">
                 <span><a href="{{ visa.link }}">Official Information</a></span>
