Apply CSS to GC Wizard buttons
Now float right and match with theme.

--- a/twvisafinder/static/twvisafinder/css/custom.css
+++ b/twvisafinder/static/twvisafinder/css/custom.css
@@ -145,3 +145,92 @@ margin-bottom: 0px;
 padding-bottom: 15px;
 padding-top: 15px;
 }
+
+
+.btn {
+background-attachment: scroll;
+background-clip: border-box;
+background-color: rgb(0, 77, 142);
+background-image: none;
+background-origin: padding-box;
+background-position: 0% 0%;
+background-position-x: 0%;
+background-position-y: 0%;
+background-repeat: repeat;
+background-size: auto;
+border-bottom-color: rgb(46, 109, 164);
+border-bottom-left-radius: 1.94333px;
+border-bottom-right-radius: 1.94333px;
+border-bottom-style: solid;
+border-bottom-width: 0px;
+border-image-outset: 0;
+border-image-repeat: stretch;
+border-image-slice: 100%;
+border-image-source: none;
+border-image-width: 1;
+border-left-color: rgb(46, 109, 164);
+border-left-style: solid;
+border-left-width: 0px;
+border-right-color: rgb(46, 109, 164);
+border-right-style: solid;
+border-right-width: 0px;
+border-top-color: rgb(46, 109, 164);
+border-top-left-radius: 1.94333px;
+border-top-right-radius: 1.94333px;
+border-top-style: solid;
+border-top-width: 0px;
+box-sizing: border-box;
+color: rgb(255, 255, 255);
+cursor: pointer;
+display: inline-block;
+font-family: Roboto, sans-serif;
+font-feature-settings: normal;
+font-kerning: auto;
+font-language-override: normal;
+font-optical-sizing: auto;
+font-size: 13.6px;
+font-size-adjust: none;
+font-stretch: 100%;
+font-style: normal;
+font-variant: normal;
+font-variant-alternates: normal;
+font-variant-caps: normal;
+font-variant-east-asian: normal;
+font-variant-ligatures: normal;
+font-variant-numeric: normal;
+font-variant-position: normal;
+font-variation-settings: normal;
+font-weight: 400;
+line-height: 13.6px;
+margin-bottom: 0px;
+margin-left: 0px;
+margin-right: 0px;
+margin-top: 0px;
+min-width: 0px;
+overflow: visible;
+overflow-x: visible;
+overflow-y: visible;
+padding-bottom: 13.6px;
+padding-left: 17.4833px;
+padding-right: 17.4833px;
+padding-top: 13.6px;
+text-align: center;
+text-decoration: rgb(255, 255, 255);
+text-decoration-color: rgb(255, 255, 255);
+text-decoration-line: none;
+text-decoration-style: solid;
+text-decoration-thickness: auto;
+text-transform: none;
+touch-action: manipulation;
+user-select: none;
+vertical-align: middle;
+white-space: nowrap;
+-moz-appearance: button;
+}
+
+.text-right {
+padding-left: 15px;
+padding-right: 15px;
+position: relative;
+text-align: right;
+}
