--- a/twvisafinder/templates/goldcardqualification.html
+++ b/twvisafinder/templates/goldcardqualification.html
@@ -17,9 +17,10 @@
     <section class="bg" id="welcome">
         <div class="container">
             <div class="row">
-                <div class="text-center">
 			<h2 class="section-heading">Gold Card Qualification Wizard</h2>
-                </div>
+                      <p>
+                    Please tick all that apply to explore ways you may qualify for the Gold Card.
+                    </p>
             </div>
         </div>
     </section>
@@ -35,7 +36,9 @@
                  </label>
 	</div></div>
 	{% endfor %}
-        <input type="submit" value="Next">
+	<div class="text-right">
+        <input type="submit" value="Next" class="btn" \>
+	</div>
         </form>
     </section>
 
