--- a/twvisafinder/templates/goldcardqualificationresults.html
+++ b/twvisafinder/templates/goldcardqualificationresults.html
@@ -26,7 +26,7 @@
      <section class="visadescriptions">
 
 	{% if qualdata|length == 0 %}
-        <p>Sorry, it looks like you don't qualify for the gold card.</p>
+        <p>Sorry, it looks like you don't qualify for the gold card.</p><p>Perhaps try <a href="https://visafinder.tw">another visa?</a></p>
 	{% else %}
 	<p>Congratulations, based on your answers:</p>
         {% endif %}
@@ -38,10 +38,11 @@
 	<p class="visacomments">because you answered Yes to "{{qualification.goldcardquestion_set.all.0}}"</p>
 	</div></div>
 	{% endfor %}
-
+	{% if qualdata|length > 0 %}
 	<p>When applying for your Gold Card, you must choose only one of these options. Read the official information, 
          work out which one you have the most supporting documents for and then 
          <a href="https://taiwangoldcard.com/application-faq/application/#how-to-apply">submit your application</a>!</p>
+        {% endif %}
      </section>
 
 
