--- a/twvisafinder/templates/goldcardqualificationtree.html
+++ b/twvisafinder/templates/goldcardqualificationtree.html
@@ -38,14 +38,14 @@
 	</div></div>
         {% endif %}
 	{% endfor %}
-	<div>
+	<div class="text-right">
 	<input type="hidden" name="enabled_trees" value="{{enabled_trees}}" />
 	<input type="hidden" name="qualdata" value="{{qualdata}}" />
         {% if next_tree != None %}
 	<input type="hidden" name="next_tree" value="{{next_tree}}" />
-        <input type="submit" value="Next &gt;&gt;" />
+        <input type="submit" value="Next &gt;&gt;" class="btn" />
         {% else %}
-        <input type="submit" value="See your results &gt;&gt;" />
+        <input type="submit" value="See your results &gt;&gt;" class="btn" />
         {% endif %}
         </div>
 
