Rename gold card qualification 'wizard' to 'check'
Wizard was too technical for most audiances, particularly ESL speakers.
Gold Card Qualification Check is much more universal

--- a/twvisafinder/templates/goldcardqualification.html
+++ b/twvisafinder/templates/goldcardqualification.html
@@ -17,7 +17,7 @@
     <section class="bg" id="welcome">
         <div class="container">
             <div class="row">
-			<h2 class="section-heading">Gold Card Qualification Wizard</h2>
+			<h2 class="section-heading">Gold Card Qualification Check</h2>
                       <p>
                     Please tick all that apply to explore ways you may qualify for the Gold Card.
                     </p>
