--- a/twvisafinder/templates/goldcardqualificationresults.html
+++ b/twvisafinder/templates/goldcardqualificationresults.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
-			<h2 class="section-heading"><a href="/gold-card-qualification/">Gold Card Qualification Wizard</a> - Results</h2>
+			<h2 class="section-heading"><a href="/gold-card-qualification/">Gold Card Qualification Check</a> - Results</h2>
                 </div>
             </div>
         </div>
