Change support email on gold card qualfiication check
Previously, at the footer of the Gold Card Qualification Check it
 listed an email address that just went to Tom, who tried to help
 people out in his spare time.

It's started getting 4-5 emails a week from people looking to apply
 for the gold card, so replies are very delayed.

Since the NDC has launched a real helpdesk to support these kind of
 questions, redirect emails to that address.

Other pages not related to the gold card will still send to the original
visafinder address.

--- a/twvisafinder/templates/goldcardqualificationtree.html
+++ b/twvisafinder/templates/goldcardqualificationtree.html
@@ -55,13 +55,13 @@
 
     <section id="contact" class="bg-light">
                 <div class="text-center">
-                    <h2 class="section-heading">Contact us!</h2>
+                    <h2 class="section-heading">New! Gold Card Helpdesk!</h2>
                     <hr class="primary">
-                    <p>If you have any questions don't hesitate to reach out!</p>
+                    <p>If you have any questions, try the Gold Card Helpdesk!</p>
                 </div>
                 <div class="text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:{{ support_email }}">{{ support_email }}</a></p>
+                    <p><a href="mailto:{{ gc_helpdesk_email }}">{{ gc_helpdesk_email }}</a></p>
                 </div>
     </section>
 
